Tests/ContributeWordPressTests/Errors/DownloadError.swift
import Foundation

enum DownloadError: EquatableError {
  case assetDownload
}
